monday commit - made a mouse icon for the portfolio website

--- a/Bikarsha Ojha/portfolio-test/main.html
+++ b/Bikarsha Ojha/portfolio-test/main.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bikarsha-OJHA-PORTFOLIO</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./main.css">
+
+    <title>Document</title>
 </head>
 <body>
-    <h1><center>Portfolio</center></h1>
+    <div class="mouse">
+        
+</div>
+    <center><h2>Bikarsha Ojha</h2></center><br>
+    <img class="" id="image" src="">
+    <img class="" id="image" src="">
+    <img class="" id="image" src="">
+
+
+    <br>
+
+<script src="main.js"></script>
+<script src="nav.js"> </script>   
+
 </body>
 </html>
