--- a/Bikarsha Ojha/portfolio-test/main.html
+++ b/Bikarsha Ojha/portfolio-test/main.html
@@ -50,6 +50,15 @@
     <p>Email: warfareonsky@gmail.com</p>
     <p>Linked In: <a href="https://www.linkedin.com/in/bikarsha-ojha-b140a3236/">Bikarsha Ojha</a></p>
 
+    <hr>
+    <p>Other Socials: </p>
+    <p><a href="https://github.com/Ouiiizi">GITHUB</a></p>
+    <p><a href="https://www.instagram.com/_biikki_/">INSTAGRAM</a></p>
+    
+
+    <br>
+
+
     <script src="main.js"></script>
 </div>
     <script src="nav.js"></script>   
